Chapter 3 : Analyzing Data

--- a/Spreadsheet/Data Analysis in Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Data Analysis in Google Sheets/takeaways.ipynb
@@ -37,6 +37,12 @@
     "    - `=UPPER()`, `=PROPER()` ,`=LOWER()`, `=TRIM()`, `=CONCATENATE()`, `=LEN()`, `=LEFT()`, `=RIGHT()`\n",
     "    - `=SEARCH(character, text, starting_index)` : Returns the index where the character is located in the text\n",
     "    - `=SUBSTITUTE(text, old_substring, new_substring, [occurences])` : Replace a substring inside a text\n",
+    "- Conditional Aggregations:\n",
+    "    - `COUNTIF(A1:A, \">1000\")` : count only if A1 to A-downward values are greather than 1000\n",
+    "    - `COUNTIFS(range1, \"condition1\", [range2, condition2] ....)` : `AND` operation on multiple `COUNTIF`\n",
+    "    - `SUMIF(condition_range, \"condition\", sum_range)` : check condition in condition_range and sum the adjacent cells in specified range when true\n",
+    "    - `SUMIFS(sum_range,condition1_range, \"condition1\",[condition2_range, \"condition2\"] )` : `AND` operation on multiple `SUMIF`\n",
+    "    - `AVERAGEIF`  and `AVERAGEIFS` : Same as `SUMIF` and `SUMIFS`\n",
     "- Find value of a cell relative to specified cell A1: `=OFFSET(A3,3,1)`\n",
     "    - Go to cell A3\n",
     "    - go down 3 cells\n",
