Chapter 2 : Statistical Data Visualization

--- a/Spreadsheet/Introduction to Statistics in Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Introduction to Statistics in Google Sheets/takeaways.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistic Functions"
+    "# Statistical Functions"
    ]
   },
   {
@@ -12,7 +12,26 @@
    "metadata": {},
    "source": [
     "- Mean, median, mode, population variance, population standard daviation, quartile, percentile : `AVERAGE()`, `MEDIAN()`, `MODE()`, `VARP()`, `STDEVP()`, `QUARTILE(range, 1_to_4)`, `PERCENTILE(range, 0.50)`\n",
-    "- z-score : `=STANDARDIZE(B2,MEAN_CELL,STDEV_CELL)`"
+    "- Correlation between 2 columns : `CORREL()`\n",
+    "- z-score : `=STANDARDIZE(B2,MEAN_CELL,STDEV_CELL)`\n",
+    "- skewness (within +2/-2 is normal ) : `=skew(A2:100)`    [Values above 0 indicate more values above the mean, below otherwise]\n",
+    "- symmetric (within +2/-2 is normal ) : `=kurt(A2:100)`    [Values above 0 indicate values \"peaked\" / \"concentrated\" around mean, flatter otherwise]\n",
+    "- get slope and intercept : `=LINEST(A1:B100,B1:B100)`, `SLOPE()`, `INTERCEPT()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Distribution Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/02.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/02.02.png\"  style=\"width: 400px, height: 300px;\"/></center>"
    ]
   },
   {
