Chapter 3 : Poking holes in predictions

--- a/Spreadsheet/Error and Uncertainty in Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Error and Uncertainty in Google Sheets/takeaways.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Statistics in Spreadsheet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Mean, median, mode, population variance, population standard daviation, quartile, percentile : `AVERAGE()`, `MEDIAN()`, `MODE()`, `VARP()`, `STDEVP()`, `QUARTILE(range, 1_to_4)`, `PERCENTILE(range, 0.50)`\n",
     "- weighted average: `= AVERAGE.WEIGHTED(data_row_range, weight_distribution_range)` (eg: `= AVERAGE.WEIGHTED(B2:C2, $F$2:$G$2)`)\n",
-    "\n",
+    "- Random value : `=RANDBETWEEN(lower_val, upper_val)`\n",
     "- Correlation between 2 columns : `CORREL()`\n",
     "- z-score : `=STANDARDIZE(B2,MEAN_CELL,STDEV_CELL)`\n",
     "- skewness (within +2/-2 is normal ) : `=skew(A2:100)`    [ >0 indicate more values above the mean, below otherwise]\n",
@@ -24,7 +31,9 @@
     "- Hypothesis testing with chi-squared-test (2 different independent groups, samples>5): `CHITEST(observed_range,expected_range)`\n",
     "    - Requires expected frequency table (a pivot table)\n",
     "    - Formula for expected frequecy : `total_row1 * total_column1 / grand_total`. (do for each row and each column)\n",
-    "\n"
+    "- Quick plot to asses probability: `=SPARKLINE(cell, options {\"charttype\" : (\"bar\", \"line\", \"column\"); \"max\" : (upper_limit)})`\n",
+    "    - example: `=SPARKLINE(J7,{\"charttype\",\"bar\";\"max\",1})`\n",
+    "- Formula of adjusted risk data to see feasibility of predictions by adding variation: `=MAX(0,(random_val_multiplier * risk) + risk)`\n"
    ]
   }
  ],
