Chapter 3 : Conditional Formatting Hacks

--- a/Spreadsheet/Conditional Formatting in Google Sheets/takeaways.ipynb
+++ b/Spreadsheet/Conditional Formatting in Google Sheets/takeaways.ipynb
@@ -24,6 +24,14 @@
     "        - example 1 : `Custom formula is` > `= $A2 = \"Abir\"`\n",
     "        - example 2 :  `...` > `Custom formula is` > `= OR($C2<6,ISTEXT($D2))` (ISTEXT can be used to evaluate nulls or N/A)\n",
     "        - example 3 : `...` > `Custom formula is` > `= AND($C2<6,ISTEXT($D2))`\n",
+    "        - example 4 (find duplicates):    - > `...` > `Custom formula is` > `= COUNTIF(A$3:A$18,A3)`\n",
+    "        - example 5 (case-insensitive search):    - > `...` > `Custom formula is` > `=SEARCH(E$3,B$3:B$19)>0`\n",
+    "        - example 6 (case-sensitive search):    - > `...` > `Custom formula is` > `= FIND(\"AB\",\"ABIR\")`\n",
+    "        - example 7 (highlight n-th largest values):    - > `...` > `Custom formula is` > `=C2 >= LARGE(A$1:A$10, 3)`\n",
+    "        - example 8 (highlight n-th smallest values):    - > `...` > `Custom formula is` > `=C2 <= SMALL(A$1:A$10, 3)`\n",
+    "        - example 9 (checkbox):  `Insert` > `Checkbox`, then  - > `...` > `Custom formula is` >  `=A2 = TRUE` \n",
+    "            - [When a checkbox is `ticked` = The cell value is `TRUE`]\n",
+    "\n",
     "- Common `Format Cells if` rules:\n",
     "    - `Text contains`\n",
     "    - `Greater than`\n",
